--- a/docs/src/content/docs/configuration/index.mdx
+++ b/docs/src/content/docs/configuration/index.mdx
@@ -62,6 +62,16 @@ Documentation and schema for the configuration of your GitHub dashboard.
     description="How to search and filter issues and prs"
   />
   <LinkCard
+    title="Providers"
+    href="./providers"
+    description="Choose which GitHub/GitLab instances appear in the dashboard"
+  />
+  <LinkCard
+    title="Migrating Filters"
+    href="./migrating-filters"
+    description="Translate legacy GitHub search filters to the DSL"
+  />
+  <LinkCard
     title="PR Section"
     href="./pr-section"
     description="Documentation for configuring the PR sections of your GitHub dashboard."
