--- a/docs/src/content/docs/getting-started/keybindings/global.mdx
+++ b/docs/src/content/docs/getting-started/keybindings/global.mdx
@@ -18,7 +18,7 @@ keybindings for the current context.
 ## `/` - Search
 
 Press <kbd>/</kbd> to focus on the dashboard's search input box. When you move the focus to the
-search input box you can edit the current section's GitHub search criteria. To refresh the section
+search input box you can edit the current section's filter DSL. To refresh the section
 with your updated query, press <kbd>Enter</kbd>. After the dashboard updates, focus is returned to
 the active section.
 
