--- a/docs/src/content/docs/configuration/reusing.mdx
+++ b/docs/src/content/docs/configuration/reusing.mdx
@@ -49,9 +49,9 @@ sections:
 ```yaml
 prSections:
   - title: Bugs
-    filters: is:open author:@me [BUG]
+    filters: state = "open" and author = "me" and text = "BUG"
   - title: Our Packages
-    filters: is:open review-requested:@me repo:work-org/our-pkg
+    filters: state = "open" and review_requested = "me" and project = "work-org/our-pkg"
 ```
 
 Starting `DASH` from the git repo, the final config used will have the `pager`, `theme` and `keybindings`
